--- a/index.html
+++ b/index.html
@@ -239,10 +239,11 @@ textarea {
         objet: "Planning à chaud {REGION} {DATE}",
         corps: "Bonsoir,\nVous trouverez en PJ. le planning de la journée de demain."
       },
-      "Planification": {
-        objet: "Planification {REGION} {DATE}",
-        corps: "Bonjour,\nCi-joint la planification mise à jour."
-      },
+     "Planification": {
+  objet: "Planification {REGION} {DATE}",
+  corps: "Bonjour à tous,\n\nVous trouverez en P.J. les interventions planifiées pour la journée de demain."
+},
+
       "Synthèse du soir": {
         objet: "Synthèse {DATE} {REGION}",
         corps: "Bonjour,\nVous trouverez ci-dessous un aperçu des indicateurs du jour."
@@ -498,6 +499,7 @@ function normalizeKey(str) {
   </script>
 </body>
 </html>
+
 
 
 
